@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.14
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.3
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "GVPE.PROTOCOL 7"
-.TH GVPE.PROTOCOL 7 "2005-03-26" "1.9" "GNU Virtual Private Ethernet"
+.TH GVPE.PROTOCOL 7 "2005-04-21" "1.9" "GNU Virtual Private Ethernet"
 .SH "The GNU-VPE Protocols"
 .IX Header "The GNU-VPE Protocols"
 .SH "Overview"
@@ -141,8 +141,8 @@ document.
 .PP
 The first part of this document describes the transport protocols which
 are used by \s-1GVPE\s0 to send it's data packets over the network.
-.SH "PART 1: Tansport protocols"
-.IX Header "PART 1: Tansport protocols"
+.SH "PART 1: Transport protocols"
+.IX Header "PART 1: Transport protocols"
 \&\s-1GVPE\s0 offers a range of transport protocols that can be used to interchange
 data between nodes. Protocols differ in their overhead, speed,
 reliability, and robustness.
